// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's pageView destination action: all fields 1`] = `
Object {
  "channel_type": "W97yQ",
  "device": Object {
    "advertising_id": "W97yQ",
    "ip": "W97yQ",
    "language": "W97yQ",
    "model": "W97yQ",
    "os": "W97YQ",
    "os_version": "W97yQ",
    "ua": "W97yQ",
    "unique_device_id": "W97yQ",
  },
  "event_type": "PAGE_VIEW",
  "id": "W97yQ",
  "items": Array [
    Object {
      "id": "W97yQ",
      "price": Object {
        "amount": -82844332243025.92,
        "currency": "UNKNOWN_CURRENCY",
      },
      "quantity": -8284433224302592,
      "seller_id": "W97yQ",
    },
  ],
  "page_id": "W97yQ",
  "referrer_page_id": "W97yQ",
  "session_id": "W97yQ",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "W97yQ",
}
`;

exports[`Testing snapshot for MolocoRmp's pageView destination action: required fields 1`] = `
Object {
  "channel_type": "W97yQ",
  "event_type": "PAGE_VIEW",
  "id": "W97yQ",
  "page_id": "W97yQ",
  "referrer_page_id": "W97yQ",
  "session_id": "W97yQ",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "W97yQ",
}
`;
